# rv

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  R6  README.md  build.rs  flake.nix  justfile  llmdiff.toml  rproject.toml  rustwrap.yaml
.claude/ai-references/: configure-repo.md  r_integration.md  tree.md
.council/: changeset.md  council.toml  drift-assessment.md
.github/scripts/: cargo-zigbuild-glibc228.sh  e2e.py  integration.py  tag_check.py
.github/workflows/: build.yaml  ci.yaml  homebrew.yml  r-tests.yml  release.yml  snapshot.yaml
.review/: docs-review-2026-07-07.md  survey-2026-07-07.md  upgrade-pkg-design.md
ai-docs/: 2025-10-18-enterprise-ppm-analysis.md  2025-10-18-rhel-research.md
claude/: repository-configure-design.md
docs/: config.md  installation.md  repository-configuration-cli.md  respository-configuration-cli.md  usage.md
dummy-pkg/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md
dummy-pkg/R/: lib.R
e2e/: .gitignore  compare.R
e2e/renv_baseline/: setup.R
e2e/rv_equivalent/: rproject.toml
e2e_tests/basic/: README.md
e2e_tests/force_source/: README.md  rproject.toml
e2e_tests/incremental/: README.md  rproject.toml
e2e_tests/multi_repos/: README.md  rproject.toml
e2e_tests/options/: README.md  rproject.toml
e2e_tests/upgrade/: README.md  rproject.toml
example_projects/archive/: rproject.toml
example_projects/big/: rproject.toml
example_projects/config-needs/: rproject.toml
example_projects/config-needs-prefer-repo/: rproject.toml
example_projects/config_needs/: rproject.toml
example_projects/configure-args/: rproject.toml
example_projects/configure_args/: rproject.toml
example_projects/custom-lib-path/: rproject.toml
example_projects/cyclic-suggests/: README.md  rproject.toml
example_projects/devel-version/: rproject.toml
example_projects/env_var/: rproject.toml
example_projects/force-src/: rproject.toml
example_projects/git-dep/: rproject.toml
example_projects/git-dep-branch/: rproject.toml
example_projects/git-dep-tag/: rproject.toml
example_projects/git-monorepo/: rproject.toml
example_projects/git-submodules/: rproject.toml
example_projects/local-deps/: rproject.toml
example_projects/local-deps-depends-only/: rproject.toml
example_projects/local-monorepo/: rproject.toml
example_projects/local-tarball-dep/: rproject.toml
example_projects/multi-repo/: rproject.toml
example_projects/no-lockfile/: rproject.toml
example_projects/old-r-version/: rproject.toml
example_projects/package-upgrade/: rproject.toml
example_projects/private-git-dep/: rproject.toml
example_projects/project-upgrade/: rproject.toml
example_projects/r-universe/: rproject.toml
example_projects/renv-export/: rproject.toml
example_projects/rspm-cran/: README.md  rproject.toml
example_projects/should-fail-unmet-ver-req/: rproject.toml
example_projects/simple/: rproject.toml  tester.sh
example_projects/trailing-slash/: rproject.toml
example_projects/upgrade/: rproject.toml
example_projects/url-dep/: rproject.toml
example_projects/windows-carData/: rproject.toml
example_projects/windows_test/: rproject.toml
invalid_projects/explicit-dep/: rproject.toml
invalid_projects/lock-repos/: rproject.toml
scripts/: install.sh
src/: activate.rs  add.rs  add_remove.rs  build_plan.rs  cache.rs  cancellation.rs  cli_docs.rs  config.rs  config_edit.rs  configure.rs  consts.rs  context.rs  db.rs  dependency_edit.rs  dependency_graph.rs  events.rs  format.rs  fs.rs  git.rs  http.rs  info.rs  install.rs  lib.rs  library.rs  link.rs  lockfile.rs  main.rs  package.rs  plan.rs  plan_summary.rs  project_info.rs  project_summary.rs  r_cmd.rs  r_finder.rs  r_version.rs  renv.rs  renv_lock.rs  renv_resolve.rs  repo_path.rs  repository.rs  (+8 more)
src/cache/: cache.rs  disk.rs  entry.rs  info.rs  mod.rs  status.rs  utils.rs
src/cli/: cache.rs  context.rs  http.rs  install.rs  link.rs  mod.rs  plan.rs  renv.rs  resolution.rs  sync.rs  utils.rs
src/configure/: dependency.rs  mod.rs  repository.rs
src/git/: local.rs  mod.rs  reference.rs  remote.rs  url.rs
src/gitx/: local.rs  mod.rs  remote.rs
src/http/: binaries.rs  user_agent.rs
src/package/: builtin.rs  description.rs  fetch.rs  mod.rs  parser.rs  remotes.rs  version.rs
src/resolver/: dependency.rs  mod.rs  needs.rs  result.rs  sat.rs
src/snapshots/: rv__add__tests__add_git_comprehensive.snap  rv__add__tests__add_git_with_branch.snap  rv__add__tests__add_git_with_commit.snap  rv__add__tests__add_git_with_directory.snap  rv__add__tests__add_git_with_tag.snap  rv__add__tests__add_local_comprehensive.snap  rv__add__tests__add_local_path.snap  rv__add__tests__add_remove.snap  rv__add__tests__add_repository_comprehensive.snap  rv__add__tests__add_simple_package.snap  rv__add__tests__add_url.snap  rv__add__tests__add_with_dependencies_only.snap  rv__add__tests__add_with_force_source.snap  rv__add__tests__add_with_install_suggestions.snap  (+62 more)
tests/: cli_add.rs  cli_configure_repository.rs  cli_global_cache.rs  cli_library_dir.rs  cli_renv_lock.rs  cli_run.rs  cli_sync_link_mode.rs  cli_tree_cycle.rs  init.rs  r_integration.rs
(+306 files in other folders)
