[package]
name = "rv"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
# To write the lockfile in the way we want + add/remove things from rproject.toml
toml_edit = "0.22.22"
serde = { version = "1", features = ["derive"] }
# There's a regex to grab the R version from a string
regex = "1"
# To find the cache directory for each OS
etcetera = "0.8.0"
# Sets some spec like data in the cache dir
cachedir = "0.3"
# We base64 encode repo URLs for use as cache dir
base64 = "0.22"
# To get the OS name, version etc
os_info = "3.9.1"
# We use bincode to serialize package databases to disk
bincode = "1"
thiserror = "2"
# We use url to parse the repository url for linux binaries and queries
url = "2.5.4"
fs-err = "3"
walkdir = "2"
os_pipe = "1"
tempfile = "3"
git2 = "0.20.0"

clap = { version = "4", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "3", optional = true }
rayon = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
ureq = { version = "2", optional = true }
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }
crossbeam = { version = "0.8", optional = true }
num_cpus = { version = "1", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
# Linking using clone
reflink-copy = { version = "0.1", optional = true }

[features]
cli = [
    "dep:clap",
    "dep:rayon",
    "dep:anyhow",
    "dep:ureq",
    "dep:clap-verbosity-flag",
    "dep:env_logger",
    "dep:log",
    "dep:crossbeam",
    "dep:num_cpus",
    "dep:flate2",
    "dep:tar",
    "dep:reflink-copy",
]

[dev-dependencies]
insta = "1"
mockito = "1"

[[bin]]
name = "rv"
required-features = ["cli"]
