[package]
name = "rv"
version = "0.3.3"
edition = "2021"

[dependencies]
toml = "0.8"
serde_json = "1"
# To write the lockfile in the way we want + add/remove things from rproject.toml
toml_edit = "0.22.22"
serde = { version = "1", features = ["derive"] }
# There's a regex to grab the R version from a string and some to parse package files
regex = "1"
# To find the cache directory for each OS
etcetera = "0.10.0"
# Sets some spec like data in the cache dir
cachedir = "0.3"
# To get the OS name, version etc
os_info = "3.9.1"
# We use bincode to serialize package databases to disk
bincode = "2"
thiserror = "2"
fs-err = "3"
walkdir = "2"
os_pipe = "1"
tempfile = "3"
reflink-copy = "0.1"
log = "0.4"
filetime = "0.2.25"
# Handling tarballs from repositories or direct url sources
flate2 = "1"
tar = "0.4"
ureq = { version = "3", features = ["platform-verifier"] }
sha2 = "0.10"
crossbeam = "0.8.4"
indicatif = "0.17.11"
num_cpus = "1.16.0"
zip = "2"

clap = { version = "4", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "3", optional = true }
rayon = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
env_logger = { version = "0.11", optional = true }
jiff = { version = "0.2", optional = true }


[features]
cli = [
    "dep:clap",
    "dep:rayon",
    "dep:anyhow",
    "dep:clap-verbosity-flag",
    "dep:env_logger",
    "dep:jiff",
]

[dev-dependencies]
insta = "1"
mockito = "1"

[[bin]]
name = "rv"
required-features = ["cli"]
